fixes to Meldestatus and improvements of TAL